--- a/gen/rust/Cargo.toml
+++ b/gen/rust/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 
 [dependencies]
 bytes = "^1.4"
-pbjson = "^0.5"
-pbjson-types = "^0.5"
-prost = "^0.12"
+futures-core = "0.3.30"
+pbjson = "^0.7"
+pbjson-types = "^0.7"
+prost = "^0.13"
+prost-types = "^0.13"
 serde = "^1.0"
-tonic = "^0.11"
+tonic = { version = "0.12.3", default-features = false, features = ["codegen", "prost"] }
 
 [features]
 default = []
